# webcore

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/css/: jit.rs  mod.rs  node.rs  parser.rs  tree.rs
src/diagnostics/: diagnostics.rs  mod.rs
src/dom/: dom.rs
src/html/: mod.rs  parser.rs
src/layout/: layout.rs  mod.rs
src/network/: http.rs
src/paint/: canvas.rs  mod.rs  paint.rs
src/utils/: validation.rs
tests/: cases_tests.rs  snapshot_tests.rs
tests/cases/css/: base.css
tests/cases/html/: atributes.html  templete.html  text.html
tests/golden_tests/css/: id_selector.css  tag_selector.css
tests/golden_tests/html/: templete.html
tests/snapshots/: atributes.html.snap  class_declaration.css.snap  css__class_declaration.css.snap.new  css_parser_class_declaration.snap  css_parser_id_selector.snap  css_parser_tag_selector.snap  html__atributes.html.snap  html__nested_element.html.snap  html__single_element.html.snap  html__text.html.snap  html_parser_atributes.snap  html_parser_nested_element.snap  html_parser_single_element.snap  html_parser_templete.snap  html_parser_text.snap  nested_element.html.snap  run_test.snap.new  single_element.html.snap  templete.html.snap  text.html.snap
