[package]
name = "webcore"
version = "0.1.0"
edition = "2021"

[lib]
name = "webcore"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.39.0", features = ["ron"] }
row = "0.2.0"
glob = "0.3.1"
